--- a/style.css
+++ b/style.css
@@ -2,24 +2,36 @@
 
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    margin: auto;
+    padding: 0px;
+    
 }
 
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 1.2;
+    max-width: 1200px;
+}
+
+.container {
+    padding: 10px 30px;
+    margin: 0;
 }
 
 .navbar, .header, footer {
     background: #1f2937;
     color: #fff;
+
 }
 
 .navbar .logo {
     font-size: 24px;
     color: #f9faf8;
+}
+
+.navbar ul {
+    list-style: none;
 }
 
 .navbar a {
@@ -30,6 +42,21 @@ body {
 
 .navbar a:hover {
     color: lightblue;
+}
+
+.navbar .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar ul li {
+    margin-left: 20px;
 }
 
 .header h1 {
@@ -45,43 +72,102 @@ body {
 
 .header img {
     max-width: 400px;
+    border-radius: 10px;
+    margin: 20px 0px 20px 10px;
+}
+
+button {
+    background-color: #3882f6;
+    color: #fff;
+    border-radius: 10px;
+    padding: 5px 20px;
+    border: none;
+    margin: 10px 0;
+}
+
+.header .container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 .content h2 {
     font-size: 36px;
     font-weight: bolder;
     color: #1f2937;
+    text-align: center;
+    margin: 20px;
 }
 
 .box {
-    background: #0a51cc;
+    background: #bad0d8;
     color: #fff;
     border-radius: 10px;
-    margin: 20px 10px;
+    margin: 20px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
     padding: 15px 20px;
+    height: 150px;
+    width: 150px;
+}
+
+.content .container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.content .boxes p {
+    text-align: center;
+    margin: 20px;
+    max-width: 150px;
 }
 
 .quote {
     font-size: 36px;
     font-style: italic;
-    color: #1f237;
+    color: #1f2937;
     background: #e5e7eb;
+}
+
+.quote .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 80px;
+}
+
+.quote .container .left {
+    align-self: flex-end;
+    margin-top: 10px;
+}
+
+.signup {
+    max-width: 600px;
 }
 
 .signup .container {
     color: #fff;
     background: #3882f6;
     border-radius: 10px;
-    margin: 20px 10px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
-    padding: 15px 20px;
+    padding: 20px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
 }
 
-button {
-    background-color: #3882f6;
-    color: #fff;
+.signup button {
     border: solid 1px #fff;
-    border-radius: 10px;
-    padding: 5px 20px;
+}
+
+footer {
+    text-align: center;
+    padding: 30px 0;
+}
+
+.content, .quote, .signup {
+    margin-bottom: 40px;
 }
